# embla

./: .gitignore  Cargo.toml
examples/: audio.rs  drawing.rs
examples/assets/: fragment_shader.glsl  vertex_shader.glsl
html/: audio.html  drawing.html
lib/js/: Cargo.toml
lib/js/js/: audio.js  lib.js  webgl.js  window.js
lib/js/src/: audio.rs  lib.rs  window.rs
lib/js/src/webgl/: mod.rs
src/: audio.rs  ecs.rs  input.rs  lib.rs  rendering.rs  rendering_api.rs  window.rs
src/ecs/: component.rs  entity.rs  mod.rs
src/graphics/: mod.rs  texture_image.rs
src/math/: mod.rs  rect.rs  semi_ord.rs  vec2.rs  vec3.rs
src/platform/: mod.rs
src/platform/native/: audio.rs  input.rs  mod.rs  rand.rs  rendering.rs  window.rs
src/platform/web/: audio.rs  input.rs  mod.rs  rand.rs  rendering.rs  window.rs
src/platform_native/: audio.rs  mod.rs  renderer_gl.rs
src/platform_web/: audio.rs  mod.rs  renderer_webgl.rs  window.rs
src/util/: astar.rs
