[package]
name = "embla"
version = "0.1.0"

[workspace]
members = [
    "lib/js"
]

[dependencies]
failure = "0.1.1"
png = "*"
serde = "*"
serde_derive = "*"
bincode = "*"
num-traits = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
js = { path = "lib/js" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
sdl2 = "*"
gl = "*"
ws = "*"
rand = "*"